@@ -1,11 +1,11 @@
-/**
- *    Copyright 2009-2017 the original author or authors.
+/*
+ *    Copyright 2009-2022 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
  *    You may obtain a copy of the License at
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
+ *       https://www.apache.org/licenses/LICENSE-2.0
  *
  *    Unless required by applicable law or agreed to in writing, software
  *    distributed under the License is distributed on an "AS IS" BASIS,
@@ -18,39 +18,41 @@ package org.apache.ibatis.scripting;
 import java.util.HashMap;
 import java.util.Map;
 
+import org.apache.ibatis.util.MapUtil;
+
 /**
  * @author Frank D. Martinez [mnesarco]
  */
 public class LanguageDriverRegistry {
 
-  private final Map<Class<?>, LanguageDriver> LANGUAGE_DRIVER_MAP = new HashMap<Class<?>, LanguageDriver>();
+  private final Map<Class<? extends LanguageDriver>, LanguageDriver> LANGUAGE_DRIVER_MAP = new HashMap<>();
 
-  private Class<?> defaultDriverClass;
+  private Class<? extends LanguageDriver> defaultDriverClass;
 
-  public void register(Class<?> cls) {
+  public void register(Class<? extends LanguageDriver> cls) {
     if (cls == null) {
       throw new IllegalArgumentException("null is not a valid Language Driver");
     }
-    if (!LANGUAGE_DRIVER_MAP.containsKey(cls)) {
+    MapUtil.computeIfAbsent(LANGUAGE_DRIVER_MAP, cls, k -> {
       try {
-        LANGUAGE_DRIVER_MAP.put(cls, (LanguageDriver) cls.newInstance());
+        return k.getDeclaredConstructor().newInstance();
       } catch (Exception ex) {
         throw new ScriptingException("Failed to load language driver for " + cls.getName(), ex);
       }
-    }
+    });
   }
 
   public void register(LanguageDriver instance) {
     if (instance == null) {
       throw new IllegalArgumentException("null is not a valid Language Driver");
     }
-    Class<?> cls = instance.getClass();
+    Class<? extends LanguageDriver> cls = instance.getClass();
     if (!LANGUAGE_DRIVER_MAP.containsKey(cls)) {
       LANGUAGE_DRIVER_MAP.put(cls, instance);
     }
   }
-  
-  public LanguageDriver getDriver(Class<?> cls) {
+
+  public LanguageDriver getDriver(Class<? extends LanguageDriver> cls) {
     return LANGUAGE_DRIVER_MAP.get(cls);
   }
 
@@ -58,11 +60,11 @@ public class LanguageDriverRegistry {
     return getDriver(getDefaultDriverClass());
   }
 
-  public Class<?> getDefaultDriverClass() {
+  public Class<? extends LanguageDriver> getDefaultDriverClass() {
     return defaultDriverClass;
   }
 
-  public void setDefaultDriverClass(Class<?> defaultDriverClass) {
+  public void setDefaultDriverClass(Class<? extends LanguageDriver> defaultDriverClass) {
     register(defaultDriverClass);
     this.defaultDriverClass = defaultDriverClass;
   }
